--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -10,6 +10,13 @@ header{
             padding-left: 5px;
             padding-right: 5px;
         }
+        .marca2{
+            font-size: 40px;
+            margin: 0 auto;
+            border: #000000 2px solid;
+            padding-left: 5px;
+            padding-right: 5px;
+        }
         #btnEmpresas{
             color: #000000;
             
