--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -27,190 +27,85 @@
     justify-content: space-around;
 }
 
-.mainIndex{
-    width: 100%;
-    height: 600px;
-    background-color: #dbdbdb;
-    .megaSale{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        .descuento{
-            background-color: #dbdbdb;
-            width: 280px;
-            border: #adadad 1px solid;
-            border-radius: 10px;
-            margin-left: 4rem;
-            margin-right: 10px;
-            .mega{
-                color: #ec0909;
-                text-decoration: none;
-                text-align: center;
-                font-size: 60px;
-                margin-top: 20px;
-                margin-left: 20px;
-                margin-right: 20px;
-            }
-            .sale{
-                color: #ec0909;
-                text-decoration: none;
-                text-align: center;
-                font-size: 60px;
-                margin-top: -50px;
-                letter-spacing: 4px;
-            }
-            .hasta{
-                color: #ec0909;
-                text-decoration: none;
-                text-align: center;
-                font-size: 60px;
-            }
-            .dieciocho{
-                color: #ec0909;
-                text-decoration: none;
-                text-align: center;
-                font-size: 150px;
-                margin-top: -85px;
-            }
-            .sinInteres{
-                color: #ec0909;
-                text-decoration: none;
-                text-align: center;
-                font-size: 40px;
-                margin-top: -80px;
-            }
-        }
-        .linkProducto{
-            text-decoration: none;
-            color: #000000;
-            font-size: 18px;
-            .card{
-                margin: 10px;
-                text-align: center;
-                &:hover{
-                    border:#adadad 2px solid;
-                }
-                .textoFoto{
-                    position: relative;
-                    top: 10px;
-                }
-                .descripcion{
-                    border-top: #686767 1px solid;
-                    margin-top: 15px;
-                    .textoDescripcion{
-                        text-decoration: none;
-                        font-size: 18px;
-                        margin: 12px;
-                        .antes{
-                            color: #686767;
-                            text-decoration: line-through;
-                        }
-                        .ahora{
-                            margin-left: 5px;
-                        }
-                        .porcentaje{
-                            margin-left: 90px;
-                            font-weight: bold;
-                            color: #479712;
-                        }
-                        .porcentaje2{
-                            margin-left: 60px;
-                            font-weight: bold;
-                            color: #479712;
-                        }
-                    }
-                    .masIva{
-                        font-size: 12px;
-                        margin-top: -20px;
-                        margin-left: -110px;
-                    }
-                    .masIvaDos{
-                        font-size: 12px;
-                        margin-top: -20px;
-                        margin-left: -70px;
-                    }
-                    .cuotas{
-                        color: #ec0909;
-                        text-align: center;
-                        margin: 5px;
-                        span{
-                            font-weight: bold;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-.formBuscador{
-    margin-top: 30px;
-    margin-left: 90px;
+#cajaproductos{
     width: 95%;
-    .botonBuscar{
-        color: #000000;
-        background-color: #66ff00;
-        border: none;
-    }
-}
-.productosVarios{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    width: 90%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #dbdbdb;
-    display: grid;
-    grid-template-columns: 18% 82%;
-    .barraLateral{
-        height: 100%;
-        padding-top: 20px;
-        padding-left: 25px;
-        color: #000000;
-        .titulo{
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
-        .botonForm{
+    margin-left: 20px;
+    .formBuscador{
+        margin-top: 30px;
+        margin-left: 90px;
+        width: 95%;
+        .botonBuscar{
             color: #000000;
             background-color: #66ff00;
-            margin-top: 10px;
             border: none;
         }
     }
-    .productos{
-        margin: 25px;
+    .productosVarios{
+        width: 95%;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #dbdbdb;
         display: grid;
-        grid-template-columns: 33% 33% 33%;
-        .card{
-            margin: 10px;
-            &:hover{
-                transform: scale(1.05);
+        grid-template-columns: 15% 85%;
+    
+        .barraLateral{
+            height: 100%;
+            padding-top: 20px;
+            padding-left: 25px;
+            color: #000000;
+            .titulo{
+                margin-top: 20px;
+                margin-bottom: 10px;
             }
-            .tituloFoto{
+            .botonForm{
                 color: #000000;
-                text-align: center;
-                padding-top: 5px;
+                background-color: #66ff00;
+                margin-top: 10px;
+                border: none;
             }
-            .descripcion{
-                display: inline-flex;
-                margin-bottom: 5px;
-                .textoDescripcion{
-                    padding-left: 25px;
-                    padding-top: 8px;
-                    color: #000000;
+        }
+        .productos{
+            margin: 25px;
+            display: grid;
+            grid-template-columns: 33% 33% 33%;
+            .card{
+                margin: 10px;
+                &:hover{
+                    transform: scale(1.05);
                 }
-                .botonAgregar{
-                    border: none;
-                    background-color: #66ff00;
+                .tituloFoto{
                     color: #000000;
-                    margin-left: 65px;
-                    height: 40px;
+                    text-align: center;
+                    padding-top: 5px;
+                }
+            .descripcion{
+                    display: inline-flex;
+                    margin-bottom: 5px;
+                    .textoDescripcion{
+                        padding-left: 25px;
+                        padding-top: 8px;
+                        color: #000000;
+                    }
+                    .botonAgregar{
+                        border: none;
+                        background-color: #66ff00;
+                        color: #000000;
+                        margin-left: 65px;
+                        height: 40px;
+                    }
                 }
             }
         }
     }
 }
+
+
+
+
+
 .textoApi{
     text-align: center;
     width: 90%;
