--- a/scss/_compra.scss
+++ b/scss/_compra.scss
@@ -48,6 +48,7 @@
                         text-align: right;
                         color: #66ff00;
                         border-top: white 2px solid;
+                        border-bottom: none;
                     }
                 }
             }
