--- a/css/estilos.css
+++ b/css/estilos.css
@@ -100,34 +100,46 @@ header .barraMenu {
     letter-spacing: 0px; }
 
 .fotosIndex {
+  width: 100%;
   display: flex;
-  justify-content: space-around; }
+  justify-content: center;
+  height: 350px;
+  overflow-y: hidden; }
+  .fotosIndex .carousel-item img {
+    width: 800px; }
 
 #cajaproductos {
   width: 95%;
-  margin-left: 20px; }
-  #cajaproductos .formBuscador {
-    margin-top: 30px;
-    margin-left: 90px;
-    width: 95%; }
-    #cajaproductos .formBuscador #btnBuscar {
-      padding-top: 6.5px;
-      padding-bottom: 6.5px;
-      padding-left: 9px;
-      padding-right: 9px;
-      border-radius: 4px;
-      color: #000000;
-      background-color: #66ff00;
-      border: 1px solid #2f7402; }
-      #cajaproductos .formBuscador #btnBuscar:hover {
-        background-color: #5de900; }
+  margin: 0 auto; }
+  #cajaproductos .formulario {
+    background-color: #dbdbdb;
+    width: 95%;
+    height: 100px;
+    margin: 0 auto; }
+    #cajaproductos .formulario .formBuscador {
+      padding-top: 40px;
+      justify-content: center; }
+      #cajaproductos .formulario .formBuscador input {
+        width: 50%; }
+      #cajaproductos .formulario .formBuscador #btnBuscar {
+        width: 8%;
+        margin-left: 10px;
+        padding-top: 6.5px;
+        padding-bottom: 6.5px;
+        padding-left: 9px;
+        padding-right: 9px;
+        border-radius: 4px;
+        color: #000000;
+        background-color: #66ff00;
+        border: 1px solid #2f7402; }
+        #cajaproductos .formulario .formBuscador #btnBuscar:hover {
+          background-color: #5de900; }
   #cajaproductos .productosVarios {
     width: 95%;
     margin-top: 30px;
     margin-bottom: 30px;
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     background-color: #dbdbdb;
     display: grid;
     grid-template-columns: 15% 85%; }
@@ -291,7 +303,8 @@ header .barraMenu {
         .mainCompra form .listado table tfoot .total {
           text-align: right;
           color: #66ff00;
-          border-top: white 2px solid; }
+          border-top: white 2px solid;
+          border-bottom: none; }
   .mainCompra .textoApiF {
     color: #000000;
     margin-top: 50px;
