--- a/css/estilos.css
+++ b/css/estilos.css
@@ -100,11 +100,11 @@ header .barraMenu {
     letter-spacing: 0px; }
 
 .fotosIndex {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  width: 800px;
+  margin: 0 auto;
   height: 350px;
-  overflow-y: hidden; }
+  overflow-y: hidden;
+  gap: 10px; }
   .fotosIndex .carousel-item img {
     width: 800px; }
 
