--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -91,5 +91,55 @@ header{
                 }
             }
         }
+        .switch{
+            margin-right: 10px;
+            background: #1d2233;
+            border-radius: 1000px;
+            border: none;
+            position: relative;
+            cursor: pointer;
+            display: flex;
+            outline: none;
+            &::after{
+                content: "";
+                display: block;
+                width: 30px;
+                height: 30px;
+                position: absolute;
+                background: #ffffff;
+                top: 0;
+                left: 0;
+                right: unset;
+                border-radius: 100px;
+                transition: 0.3s ease all;
+                box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.2);
+            }
+            &.ligth{
+                background: #ffffff;
+                color: #4e4e4e;
+                &::after{
+                    right: 0;
+                    left: unset;
+                }
+            }
+            .sol{
+                margin: 5px;
+                width: 20px;
+                height: 20px;
+                line-height: 30px;
+                display: block;
+                background: none;
+                color: #4e4e4e;
+            }
+            .luna{
+                margin: 5px;
+                width: 20px;
+                height: 20px;
+                line-height: 30px;
+                display: block;
+                background: none;
+                color: #ffffff;
+            }
+        }
     }
 }
